force-app/main/default/objects/NewsConfig__mdt/NewsConfig__mdt.object-meta.xml
<CustomObject>
    <description>Naver news api 조회를 위한 keyword 관리</description>
    <label>News Config</label>
    <pluralLabel>News Configs</pluralLabel>
</CustomObject>