force-app/main/default/objects/NewsConfig__mdt/fields/DisplayCount__c.field-meta.xml
<CustomField>
    <fullName>DisplayCount__c</fullName>
    <description>LWC 기본 표시 개수</description>
    <inlineHelpText>LWC 기본 표시 개수</inlineHelpText>
    <label>Display Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>