force-app/main/default/objects/NewsConfig__mdt/fields/ExcludeTerms__c.field-meta.xml
<CustomField>
    <fullName>ExcludeTerms__c</fullName>
    <label>Exclude Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>