force-app/main/default/objects/NewsConfig__mdt/fields/FetchCount__c.field-meta.xml
<CustomField>
    <fullName>FetchCount__c</fullName>
    <inlineHelpText>API 호출 시 가져올 건수 (최대 100)</inlineHelpText>
    <label>Fetch Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>