force-app/main/default/objects/NewsConfig__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <inlineHelpText>검색 키워드 (네이버 연산자 사용 가능)</inlineHelpText>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>