force-app/main/default/objects/NewsConfig__mdt/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <label>Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>