force-app/main/default/objects/NewsConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Keyword__c</columns>
    <columns>DisplayCount__c</columns>
    <columns>FetchCount__c</columns>
    <columns>ExcludeTerms__c</columns>
    <columns>RetentionDays__c</columns>
    <columns>Active_is__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>